--- a/view.html
+++ b/view.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/variables.css" />
-		<link rel="stylesheet" href="css/styles.css" />
-		<title>Dreamix | Scandinavian Style Salmon</title>
+		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		Hello from VIEW page
+	</body>
 </html>
