--- a/index.html
+++ b/index.html
@@ -1,29 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
-		<title>Dreamix | Recipes</title>
 		<link rel="stylesheet" href="css/variables.css" />
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/utils.css" />
 		<link rel="stylesheet" href="css/styles.css" />
+		<title>Dreamix | Recipes</title>
 	</head>
 	<body>
 		<div class="container wrapper-grid">
-			<header>
-				<h1 id="website-title" class="title" data-motto="I made this for you!">Dreamix Recipes</h1>
-			</header>
+			<nav>
+				<a href="#main" data-skip>Skip to Content</a>
+				<a href="index.html" class="title outline--none">
+					<h1 data-motto="I made this for you!">Dreamix Recipes</h1>
+				</a>
+				<input type="checkbox" id="menu-toggle" aria-label="Menu toggle" aria-haspopup="menu" />
+				<label for="menu-toggle" title="Toggle menu">
+					<span>Toggle menu</span>
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="menu__closed" aria-hidden="true">
+						<path fill="none" d="M0 0h24v24H0V0z" />
+						<path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
+					</svg>
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="menu__opened" aria-hidden="true">
+						<path fill="none" d="M0 0h24v24H0V0z" />
+						<path
+							d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
+						/>
+					</svg>
+				</label>
+				<ul data-dropdown>
+					<li>
+						<a href="#" aria-haspopup="true">Services</a>
+						<ul>
+							<li><a href="#">Recipes</a></li>
+							<li>
+								<a href="#" aria-haspopup="true">Deliveries</a>
+								<ul>
+									<li><a href="#">Pick n' Go</a></li>
+									<li><a href="#">Home Delivery</a></li>
+									<li>
+										<a href="#" aria-haspopup="true">Other</a>
+										<ul>
+											<li><a href="#">Econt</a></li>
+											<li><a href="#">Speedy</a></li>
+											<li><a href="#">DHL</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li><a href="#">Q & A</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="view.html">About</a>
+					</li>
+				</ul>
+			</nav>
 
-			<main class="grid">
-				<a class="grid__item outline--none" href="/view.html">
+			<main class="grid" id="main">
+				<a class="grid__item outline--none" href="#salad" id="salad" aria-label="See Tasty Fresh Salad Bowl">
 					<article class="card card--secondary">
 						<header class="card__header">
 							<div class="card__heading">
-								<div class="card__icon">
+								<div class="card__icon" aria-hidden="true">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 										<path fill="none" d="M0 0h24v24H0V0z" />
 										<path
@@ -31,12 +73,18 @@
 										/>
 									</svg>
 								</div>
-								<p class="card__sub-title">Salad</p>
+								<h1 class="card__sub-title">Salad</h1>
 							</div>
-							<h1 class="card__title">Tasty Fresh Salad Bowl</h1>
+							<h2 class="card__title">Tasty Fresh Salad Bowl</h2>
 						</header>
 						<div class="card__body">
-							<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 2829.333 2829.333" class="salad">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								xml:space="preserve"
+								viewBox="0 0 2829.333 2829.333"
+								class="salad"
+								aria-hidden="true"
+							>
 								<g id="bowl">
 									<path
 										fill="#fde4d1"
@@ -389,11 +437,11 @@
 					</article>
 				</a>
 
-				<a class="grid__item outline--none" href="/view.html">
+				<a class="grid__item outline--none" href="#burger" id="burger" aria-label="See Juicy American Burger">
 					<article class="card">
 						<header class="card__header">
 							<div class="card__heading">
-								<div class="card__icon">
+								<div class="card__icon" aria-hidden="true">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 										<path fill="none" d="M0 0h24v24H0z" />
 										<path
@@ -401,12 +449,18 @@
 										/>
 									</svg>
 								</div>
-								<p class="card__sub-title">Burger</p>
+								<h1 class="card__sub-title">Burger</h1>
 							</div>
-							<h1 class="card__title">Juicy American Burger</h1>
+							<h2 class="card__title">Juicy American Burger</h2>
 						</header>
 						<div class="card__body">
-							<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 1400 1400" class="burger">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								xml:space="preserve"
+								viewBox="0 0 1400 1400"
+								class="burger"
+								aria-hidden="true"
+							>
 								<g id="bottom-bun" transform="rotate(12.5 675 700)">
 									<linearGradient
 										id="b"
@@ -1106,11 +1160,11 @@
 					</article>
 				</a>
 
-				<a class="grid__item span--2 outline--none" href="/view.html">
+				<a class="grid__item span--2 outline--none" href="#meal" id="meal" aria-label="See Juicy Classic Menu Whopper Meal">
 					<article class="card card--tertiary">
 						<header class="card__header">
 							<div class="card__heading">
-								<div class="card__icon">
+								<div class="card__icon" aria-hidden="true">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 										<path fill="none" d="M0 0h24v24H0V0z" />
 										<path
@@ -1118,12 +1172,18 @@
 										/>
 									</svg>
 								</div>
-								<p class="card__sub-title">Meal</p>
+								<h1 class="card__sub-title">Meal</h1>
 							</div>
-							<h1 class="card__title">Classic Menu Whopper Meal</h1>
+							<h2 class="card__title">Classic Menu Whopper Meal</h2>
 						</header>
 						<div class="card__body">
-							<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 1400 1400" class="meal">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								xml:space="preserve"
+								viewBox="0 0 1400 1400"
+								class="meal"
+								aria-hidden="true"
+							>
 								<g id="menu-table">
 									<path fill="#897862" d="m228.5 1104.7 49.1 99.7h516.8l56.3-99.7z" />
 									<path fill="#DFCAAA" d="M1192.1 1104.7H850.7l-56.3 99.7H1143z" />
@@ -1303,24 +1363,32 @@
 			</main>
 
 			<aside aria-labelledby="top-recipes-title">
-				<h1 id="top-recipes-title" data-aside-title>Top recipes</h1>
-				<ul aria-label="List of Top recipes for past month">
-					<li aria-label="Number 1">Salmon with smoked cheese</li>
-					<li aria-label="Number 2">Seafood pasta</li>
-					<li aria-label="Number 3">Pork Tenderloin in Bourbon</li>
-					<li aria-label="Number 4">G.G.'s Chocolate Sheet Cake</li>
-					<li aria-label="Number 5">Spring Orzo Risotto</li>
-					<li aria-label="Number 6">Salmon with smoked cheese</li>
-					<li aria-label="Number 7">Seafood pasta</li>
-					<li aria-label="Number 8">Pork Tenderloin in Bourbon</li>
-					<li aria-label="Number 9">G.G.'s Chocolate Sheet Cake</li>
-					<li aria-label="Number 10">Spring Orzo Risotto</li>
+				<a href="#credits" data-skip>Skip to Footer</a>
+				<h1 id="top-recipes-title" data-aside-title>Top 10 recipes</h1>
+				<ul aria-describedby="top-recipes-title">
+					<li><a href="#" aria-label="Number 1 | Salmon with smoked cheese">Salmon with smoked cheese</a></li>
+					<li><a href="#" aria-label="Number 2 | Seafood pasta">Seafood pasta</a></li>
+					<li><a href="#" aria-label="Number 3 | Pork Tenderloin in Bourbon">Pork Tenderloin in Bourbon</a></li>
+					<li><a href="#" aria-label="Number 4 | G.G.'s Chocolate Sheet Cake">G.G.'s Chocolate Sheet Cake</a></li>
+					<li><a href="#" aria-label="Number 5 | Spring Orzo Risotto">Spring Orzo Risotto</a></li>
+					<li><a href="#" aria-label="Number 6 | Salmon with smoked cheese">Salmon with smoked cheese</a></li>
+					<li><a href="#" aria-label="Number 7 | Seafood pasta">Seafood pasta</a></li>
+					<li><a href="#" aria-label="Number 8 | Pork Tenderloin in Bourbon">Pork Tenderloin in Bourbon</a></li>
+					<li><a href="#" aria-label="Number 9 | G.G.'s Chocolate Sheet Cake">G.G.'s Chocolate Sheet Cake</a></li>
+					<li><a href="#" aria-label="Number 10 | Spring Orzo Risotto">Spring Orzo Risotto</a></li>
 				</ul>
 			</aside>
 
-			<footer>
+			<footer id="credits">
 				&copy; 2022
 				<a href="https://www.vecteezy.com/free-vector">Vectors by Vecteezy</a>
+				<a href="https://github.com/Dodobrat/dreamix-css" id="github-repo" aria-label="Github Repository link">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 998" fill="currentColor" aria-hidden="true">
+						<path
+							d="M0 512q0 166 95.5 298.5T343 996q6 1 10 1t6.5-1.5 4-3 2-5 .5-4.5V882q-37 4-66-.5t-45.5-14-29-23.5-17-25.5-9-24T194 780q-9-15-27-27.5t-27-20-2-14.5q50-26 113 66 34 51 119 30 10-41 40-70-116-21-172-86t-56-158q0-87 55-151-22-65 6-137 29-2 65 11.5t50.5 23T384 264q57-16 128.5-16T642 264q13-9 29-19t49-21.5 61-9.5q27 71 6 135 56 64 56 152 0 92-56.5 157.5T615 744q43 43 43 104v129q0 1 1 3 0 6 .5 9t4.5 6 11 3q154-52 251.5-185.5T1024 512q0-104-40.5-199t-109-163.5T711 40.5 512 0 313 40.5t-163.5 109T40.5 313 0 512z"
+						/>
+					</svg>
+				</a>
 			</footer>
 		</div>
 	</body>
